--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get_it: ^8.0.0
   path: ^1.9.0
   sqflite: ^2.3.3+1
+  syncfusion_flutter_gauges: ^27.1.51
 
 dev_dependencies:
   flutter_lints: ^3.0.0
