--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sqflite: ^2.3.3+1
   syncfusion_flutter_gauges: ^27.1.51
   path: ^1.9.0
+  fluttertoast: ^8.2.8
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
